--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@ body {
 a {
     text-decoration: none;
     color: #17425a;
+
 }
 
 h1 {
     text-align: center;
+   
 }
 
 table{
@@ -27,11 +29,24 @@ h3{
     color: white;
     line-height: 30px;
     padding-left:5px;
-}
+    transition:width 2s;
+    
+    }
+    
+@media(max-width:960px){
+       .container{
+           width:100%;
+           position: absolute;
+       }
+       .dt{display:none}
+    }
+.dg:hover{transform:rotate(180deg);
+        transition: width 2s,height 2s,transform 2s}
+.dt:hover{
+        position: relative;
+        animation:myfirst 5s linear 2s infinite alternate;}
 
-.dt {
-    text-align: center;
-}
+.dt:hover{text-align: center}
 
 .container {
     width: 800px;
@@ -39,4 +54,39 @@ h3{
     padding: 10px 20px;
     margin-top: 0;
     background-image: url("bg.jpg")
+}
+@media(max-width:960px){
+    .container{
+        width:100%;
+        position: absolute;
+    }
+    .dt{display:none}
+ }
+.dg:hover{transform:rotate(180deg);
+     transition: width 2s,height 2s,transform 2s}
+.dt:hover{
+     position: relative;
+     animation:myfirst 5s linear 2s infinite alternate;}
+
+@keyframes myfirst {
+     0%{
+         left:0px;
+         top:0px;
+     }
+     25%{
+        left:200px;
+        top:0px;
+    }
+    50%{
+        left:200px;
+        top:200px;
+    }
+    75%{
+        left:0px;
+        top:200px;
+    }
+    100%{
+        left:0px;
+        top:0px;
+    }
 }
