--- a/style.css
+++ b/style.css
@@ -7,46 +7,56 @@ body {
 a {
     text-decoration: none;
     color: #17425a;
-
 }
 
 h1 {
     text-align: center;
-   
 }
 
-table{
+table {
     text-align: center;
     font-weight: bold;
 }
 
-p{
+p {
     text-indent: 20px;
 }
 
-h3{
+h3 {
     background-color: #f7b5d4;
     color: white;
     line-height: 30px;
-    padding-left:5px;
-    transition:width 2s;
-    
-    }
-    
-@media(max-width:960px){
-       .container{
-           width:100%;
-           position: absolute;
-       }
-       .dt{display:none}
-    }
-.dg:hover{transform:rotate(180deg);
-        transition: width 2s,height 2s,transform 2s}
-.dt:hover{
-        position: relative;
-        animation:myfirst 5s linear 2s infinite alternate;}
+    padding-left: 5px;
+    transition: 1s;
+}
 
-.dt:hover{text-align: center}
+h3:hover{
+    line-height: 60px;
+}
+
+@media(max-width:960px) {
+    .container {
+        width: 100%;
+        position: absolute;
+    }
+    .dt {
+        display: none
+    }
+}
+
+/* .dg:hover {
+    transform: rotate(180deg);
+    transition: width 2s, height 2s, transform 2s
+}
+
+.dt:hover {
+    position: relative;
+    animation: myfirst 5s linear 2s infinite alternate;
+}
+
+.dt:hover {
+    text-align: center
+} */
 
 .container {
     width: 800px;
@@ -55,38 +65,46 @@ h3{
     margin-top: 0;
     background-image: url("bg.jpg")
 }
-@media(max-width:960px){
-    .container{
-        width:100%;
+
+@media(max-width:960px) {
+    .container {
+        width: 100%;
         position: absolute;
     }
-    .dt{display:none}
- }
-.dg:hover{transform:rotate(180deg);
-     transition: width 2s,height 2s,transform 2s}
-.dt:hover{
-     position: relative;
-     animation:myfirst 5s linear 2s infinite alternate;}
+    .dt {
+        display: none
+    }
+}
+
+/* .dg:hover {
+    transform: rotate(180deg);
+    transition: width 2s, height 2s, transform 2s
+} */
+
+.dt {
+    position: relative;
+    animation: myfirst 5s;
+}
 
 @keyframes myfirst {
-     0%{
-         left:0px;
-         top:0px;
-     }
-     25%{
-        left:200px;
-        top:0px;
+    0% {
+        left: 0px;
+        top: 0px;
     }
-    50%{
-        left:200px;
-        top:200px;
+    25% {
+        left: 200px;
+        top: 0px;
     }
-    75%{
-        left:0px;
-        top:200px;
+    50% {
+        left: 200px;
+        top: 200px;
     }
-    100%{
-        left:0px;
-        top:0px;
+    75% {
+        left: 0px;
+        top: 200px;
+    }
+    100% {
+        left: 0px;
+        top: 0px;
     }
 }
